[package]
name = "meet-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rand = "0.3"
regex = "0.2"

reqwest = { version = "0.11", features = ["json"] }
futures = "0.3" # for our async / await blocks
tokio = { version = "1", features = ["full"] }
error-chain = "0.12.4"

log = "0.4.0"
env_logger = "0.9.3"